--- a/src/scss/Pop-up2.scss
+++ b/src/scss/Pop-up2.scss
@@ -119,3 +119,10 @@
 }
 .close-popup {
 }
+.lock body {
+  overflow: hidden;
+  -ms-touch-action: none;
+      touch-action: none;
+  -ms-scroll-chaining: none;
+      overscroll-behavior: none;
+}
