--- a/src/scss/preloader.scss
+++ b/src/scss/preloader.scss
@@ -1,44 +1,90 @@
+// .preloader {
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: #080808;
+//   z-index: 1001;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+
+//   transition: 0.3s opacity;
+//   //  display: none;
+
+//   &.loaded_hiding {
+//     transition: 0.3s opacity;
+//     opacity: 0;
+//   }
+
+//   &.loaded {
+//     display: none;
+//   }
+
+//   &__content {
+//     font-family: "Montserrat";
+//     font-style: normal;
+//     font-weight: 300;
+//     font-size: 24px;
+//     line-height: 120.83%;
+//     color: #fafafa;
+//     letter-spacing: 0.26em;
+//     text-transform: uppercase;
+//     display: flex;
+
+//     @media (max-width: 1024px) {
+//       letter-spacing: normal;
+//     }
+//   }
+
+//   &__variable-element.space {
+//     margin-left: 15px;
+//   }
+// }
+
 .preloader {
-  position: fixed;
-  left: 0;
-  top: 0;
   width: 100%;
-  height: 100%;
-  background: #080808;
-  z-index: 1001;
+  height: 100vh;
+  background: #000;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 200;
+  transition: all .7s ease-out;
 
-  transition: 0.3s opacity;
-  //  display: none;
-
-  &.loaded_hiding {
-    transition: 0.3s opacity;
-    opacity: 0;
+  &__container {
+      width: 137px;
+      display: flex;
+      justify-content: space-between;
   }
 
-  &.loaded {
-    display: none;
+  &__title {
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 29px;
+      letter-spacing: 0.26em;
+      color: white;
+      transition: all .5s;
+      &__active {
+          text-align: center;
+      }
   }
 
-  &__content {
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 120.83%;
-    color: #fafafa;
-    letter-spacing: 0.26em;
-    text-transform: uppercase;
-    display: flex;
-
-    @media (max-width: 1024px) {
-      letter-spacing: normal;
-    }
+  &__load {
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 29px;
+      letter-spacing: 0.26em;
+      color:white;
   }
 
-  &__variable-element.space {
-    margin-left: 15px;
+  &__hide {
+      opacity: 0;
+      z-index: -10;
+      visibility: hidden;
   }
 }
