--- a/src/scss/preloader.scss
+++ b/src/scss/preloader.scss
@@ -44,6 +44,7 @@
 // }
 
 .preloader {
+    overflow:hidden;
   width: 100%;
   height: 100vh;
   background: #000;
@@ -55,8 +56,8 @@
   left: 0;
   z-index: 200;
   transition: all .7s ease-out;
-  overflow-y:hidden;
-
+  overflow:hidden;
+  
   &__container {
       width: 137px;
       display: flex;
