--- a/src/scss/preloader.scss
+++ b/src/scss/preloader.scss
@@ -43,10 +43,13 @@
 //   }
 // }
 
+.overflow {
+    overflow: hidden !important;
+}
 .preloader {
-    overflow:hidden;
+    
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #000;
   display: flex;
   justify-content: center;
@@ -82,7 +85,7 @@
       line-height: 29px;
       letter-spacing: 0.26em;
       color:white;
-      overflow:unset;
+    //   overflow:unset;
   }
 
   &__hide {
