--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -54,6 +54,9 @@
     @media (min-height: 800px) {
       bottom: 25%;
     }
+    @media (height: 810px) {
+      bottom: 10%;
+    }
     @media (min-height: 840px) {
       bottom: 27%;
     }
