--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,9 +26,9 @@ body {
   font-size: 14px;
   color: #ffffff;
   background: #e5e5e5;
-  position: relative;
+  // position: relative;
 }
-.lock {
+._lock {
   overflow: hidden;
 }
 .overflow {
