--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,8 +82,8 @@ main {
     height: 959px;
   }
   @media (max-width: 500px) {
-    // height: 100vh; //542px
-    height: 610px; 
+    height: 100vh; //542px
+    // height: 610px; 
   }
  
   &__swiper {
