--- a/src/scss/often.scss
+++ b/src/scss/often.scss
@@ -123,7 +123,8 @@
     }
 
     &__flag {
-      margin-left: 12px;
+      margin-left: 0px;
+      margin-right: 10px;
       font-size: 10px;
     }
 
