--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -123,296 +123,299 @@ $fourth_text_color: #3A3E4B;
     }
   }
 }
-.sidemenu {
-  width: 100vw;
-  height: 100%;
-  padding: 212px 422px 40px 56px;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  top: 0;
-  left: -150%;
-  transition: all 0.5s;
-  z-index: 25;
-  background: rgba(0, 0, 0, 0.98);
+/////////////////////
+// .sidemenu {
+//   width: 100vw;
+//   height: 100%;
+//   padding: 212px 422px 40px 56px;
+//   position: fixed;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   top: 0;
+//   left: -150%;
+//   transition: all 0.5s;
+//   z-index: 25;
+//   background: rgba(0, 0, 0, 0.98);
 
-  &__main {
-      margin-left: 157px;
-  }
+//   &__main {
+//       margin-left: 157px;
+//   }
 
-  &__main-list {
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 322px;
-      list-style: none;
-  }
+//   &__main-list {
+//       padding: 0;
+//       display: flex;
+//       flex-direction: column;
+//       justify-content: space-between;
+//       height: 322px;
+//       list-style: none;
+//   }
 
-  &__main-item {
-      a {
-          font-weight: 700;
-          font-size: 32px;
-          line-height: 39px;
-          text-decoration: none;
-          color: $main_text_color;
-          opacity: 0.5;
-          transition: all 0.2s;
-          &:hover {
-              opacity: 1;
-          }
-      }
-      &-btn {
-          display: none;
-          button {
-              width: 158px;
-              height: 42px;
-              border: 1px solid #ffffff;
-              background: transparent;
-              font-size: 11px;
-              line-height: 13px;
-              text-align: center;
-              letter-spacing: 0.06em;
-              color: $main_text_color;
-          }
-      }
-  }
+//   &__main-item {
+//       a {
+//           font-weight: 700;
+//           font-size: 32px;
+//           line-height: 39px;
+//           text-decoration: none;
+//           color: $main_text_color;
+//           opacity: 0.5;
+//           transition: all 0.2s;
+//           &:hover {
+//               opacity: 1;
+//           }
+//       }
+//       &-btn {
+//           display: none;
+//           button {
+//               width: 158px;
+//               height: 42px;
+//               border: 1px solid #ffffff;
+//               background: transparent;
+//               font-size: 11px;
+//               line-height: 13px;
+//               text-align: center;
+//               letter-spacing: 0.06em;
+//               color: $main_text_color;
+//           }
+//       }
+//   }
 
-  &__footer {
-      /* margin-top: 170px; */
-      width: 546px;
-      display: flex;
-      justify-content: space-between;
-  }
+//   &__footer {
+//       /* margin-top: 170px; */
+//       width: 546px;
+//       display: flex;
+//       justify-content: space-between;
+//   }
 
-  &__social-list {
-      width: 76px;
-      display: flex;
-      justify-content: space-between;
-  }
+//   &__social-list {
+//       width: 76px;
+//       display: flex;
+//       justify-content: space-between;
+//   }
 
-  &__social-item {
-      a {
-          font-weight: 600;
-          font-size: 11px;
-          line-height: 13px;
-          letter-spacing: 0.06em;
-          color: $main_text_color;
-          text-decoration: none;
-          &:hover {
-              color: $main_text_color;
-          }
-      }
-  }
+//   &__social-item {
+//       a {
+//           font-weight: 600;
+//           font-size: 11px;
+//           line-height: 13px;
+//           letter-spacing: 0.06em;
+//           color: $main_text_color;
+//           text-decoration: none;
+//           &:hover {
+//               color: $main_text_color;
+//           }
+//       }
+//   }
 
-  &__select {
-      position: relative;
-      width: 117px;
-      height: 24px;
-      padding: 0 10px 0 12px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      border-radius: 9px;
-      cursor: pointer;
+//   &__select {
+//       position: relative;
+//       width: 117px;
+//       height: 24px;
+//       padding: 0 10px 0 12px;
+//       display: flex;
+//       align-items: center;
+//       justify-content: space-between;
+//       border: 1px solid rgba(255, 255, 255, 0.5);
+//       border-radius: 9px;
+//       cursor: pointer;
 
-      span {
-          margin-left: 6px;
-          font-weight: 600;
-          font-size: 11px;
-          line-height: 13px;
-          letter-spacing: 0.06em;
-          color: $main_text_color;
-      }
+//       span {
+//           margin-left: 6px;
+//           font-weight: 600;
+//           font-size: 11px;
+//           line-height: 13px;
+//           letter-spacing: 0.06em;
+//           color: $main_text_color;
+//       }
 
-      &:hover {
-          .sidemenu__option {
-              display: block;
-          }
-      }
-  }
+//       &:hover {
+//           .sidemenu__option {
+//               display: block;
+//           }
+//       }
+//   }
 
-  &__option {
-      width: 117px;
-      position: absolute;
-      display: none;
-      top: 100%;
-      left: 0;
-      transition: all 0.5s;
-  }
+//   &__option {
+//       width: 117px;
+//       position: absolute;
+//       display: none;
+//       top: 100%;
+//       left: 0;
+//       transition: all 0.5s;
+//   }
 
-  &__option-item {
-      margin: 2px 0;
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      border-radius: 9px;
-      padding-left: 28px;
-      font-weight: 600;
-      font-size: 11px;
-      letter-spacing: 0.06em;
-      color: $main_text_color;
+//   &__option-item {
+//       margin: 2px 0;
+//       border: 1px solid rgba(255, 255, 255, 0.5);
+//       border-radius: 9px;
+//       padding-left: 28px;
+//       font-weight: 600;
+//       font-size: 11px;
+//       letter-spacing: 0.06em;
+//       color: $main_text_color;
 
-      &__active {
-          background: rgba(255, 255, 255, 0.5);
-      }
-  }
+//       &__active {
+//           background: rgba(255, 255, 255, 0.5);
+//       }
+//   }
 
-  &__contacts {
-      width: 234px;
-      display: flex;
-      justify-content: space-between;
-  }
+//   &__contacts {
+//       width: 234px;
+//       display: flex;
+//       justify-content: space-between;
+//   }
 
-  &__tel,
-  &__email {
-      a {
-          font-weight: 600;
-          font-size: 11px;
-          line-height: 13px;
-          letter-spacing: 0.06em;
-          color: $main_text_color;
-          text-decoration: none;
-          &:hover {
-              color: $main_text_color;
-          }
-      }
-  }
-}
+//   &__tel,
+//   &__email {
+//       a {
+//           font-weight: 600;
+//           font-size: 11px;
+//           line-height: 13px;
+//           letter-spacing: 0.06em;
+//           color: $main_text_color;
+//           text-decoration: none;
+//           &:hover {
+//               color: $main_text_color;
+//           }
+//       }
+//   }
+// }
 
-@media (max-width: 1024px) {
-  .sidemenu {
-      &__main {
-      }
+// @media (max-width: 1024px) {
+//   .sidemenu {
+//       &__main {
+//       }
 
-      &__main-list {
-      }
+//       &__main-list {
+//       }
 
-      &__main-item {
-      }
+//       &__main-item {
+//       }
 
-      &__footer {
-      }
+//       &__footer {
+//       }
 
-      &__social-list {
-      }
+//       &__social-list {
+//       }
 
-      &__social-item {
-      }
+//       &__social-item {
+//       }
 
-      &__select {
-      }
+//       &__select {
+//       }
 
-      &__option {
-      }
+//       &__option {
+//       }
 
-      &__option-item {
-      }
+//       &__option-item {
+//       }
 
-      &__contacts {
-      }
+//       &__contacts {
+//       }
 
-      &__tel {
-      }
+//       &__tel {
+//       }
 
-      &__email {
-      }
-  }
-}
-@media (max-width: 768px) {
-  .sidemenu {
-      padding: 212px 0 40px 56px;
+//       &__email {
+//       }
+//   }
+// }
+// @media (max-width: 768px) {
+//   .sidemenu {
+//       padding: 212px 0 40px 56px;
 
-      &__main {
-          margin-left: 140px;
-      }
+//       &__main {
+//           margin-left: 140px;
+//       }
 
-      &__main-list {
-      }
+//       &__main-list {
+//       }
 
-      &__main-item {
-      }
+//       &__main-item {
+//       }
 
-      &__footer {
-      }
+//       &__footer {
+//       }
 
-      &__social-list {
-      }
+//       &__social-list {
+//       }
 
-      &__select {
-      }
+//       &__select {
+//       }
 
-      &__option {
-      }
+//       &__option {
+//       }
 
-      &__option-item {
-      }
+//       &__option-item {
+//       }
 
-      &__contacts {
-      }
+//       &__contacts {
+//       }
 
-      &__tel {
-      }
+//       &__tel {
+//       }
 
-      &__email {
-      }
-  }
-}
-@media (max-width: 624px) {
-  .sidemenu {
-      padding: 152px 24px 24px;
+//       &__email {
+//       }
+//   }
+// }
+// @media (max-width: 624px) {
+//   .sidemenu {
+//       padding: 152px 24px 24px;
 
-      &__main {
-          margin: 0 auto;
-      }
+//       &__main {
+//           margin: 0 auto;
+//       }
 
-      &__main-list {
-          align-items: center;
-      }
+//       &__main-list {
+//           align-items: center;
+//       }
 
-      &__main-item {
-          &-btn {
-              display: block;
-          }
-      }
+//       &__main-item {
+//           &-btn {
+//               display: block;
+//           }
+//       }
 
-      &__footer {
-          width: 100%;
-          align-items: center;
-          /* margin-top: 105px; */
-      }
+//       &__footer {
+//           width: 100%;
+//           align-items: center;
+//           /* margin-top: 105px; */
+//       }
 
-      &__social-list {
-          display: none;
-      }
+//       &__social-list {
+//           display: none;
+//       }
 
-      &__social-item {
-      }
+//       &__social-item {
+//       }
 
-      &__select {
-      }
+//       &__select {
+//       }
 
-      &__option {
-      }
+//       &__option {
+//       }
 
-      &__option-item {
-      }
+//       &__option-item {
+//       }
 
-      &__contacts {
-          width: auto;
-          flex-direction: column;
-      }
+//       &__contacts {
+//           width: auto;
+//           flex-direction: column;
+//       }
 
-      &__tel {
-          text-align: right;
-      }
+//       &__tel {
+//           text-align: right;
+//       }
 
-      &__email {
-          text-align: right;
-      }
-  }
-}
+//       &__email {
+//           text-align: right;
+//       }
+//   }
+// }
 
+
+///////////////////////
 
 .menu {
   display: flex;
@@ -463,7 +466,11 @@ $fourth_text_color: #3A3E4B;
       height: calc(100vh - 250px);
       top: 20px;
     }
+    @media (min-height: 740px){
+    height: calc(100vh - 312px);
+    top: 20px;
   }
+}
   &__list {
     height: 100%;
     display: flex;
