--- a/src/scss/often.scss
+++ b/src/scss/often.scss
@@ -123,8 +123,11 @@
     }
 
     &__flag {
-      margin-left: 0px;
-      margin-right: 10px;
+      ///
+      margin-left: 10px;//
+      ////
+      // margin-right: 10px;
+      ///
       font-size: 10px;
     }
 
