--- a/src/scss/often.scss
+++ b/src/scss/often.scss
@@ -102,6 +102,7 @@
     }
 
     &__location {
+     
       margin-left: 8.4%; //19.09%
       width: 117px;
       height: 24px;
@@ -112,6 +113,7 @@
       border-radius: 8.70783px;
       display: flex;
       align-items: center;
+      z-index: 9999999; 
       @media (max-width: 1024px) {
         margin-left: 7.71%;
       }
@@ -144,6 +146,9 @@
       line-height: 11.18%;
       letter-spacing: 0.06em;
       color: inherit;
+      z-index: 9999999; 
+      
+
     }
 
     &__city-name {
