--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -112,8 +112,8 @@ $fourth_text_color: #3A3E4B;
 
   //  Впорядкувати між == &__menu ==  та ==.menu ==
   &__menu {
-    // width: 100%;
-//     height: 100%;
+    width: 100%;
+    height: 100%;
     flex: 1 1 83.6%;
     @media (max-width: 1024px) {
       flex: 1 1 82.69%;
@@ -511,7 +511,7 @@ $fourth_text_color: #3A3E4B;
       width: 158px;
     }
   }
-
+}
 @media (max-width: 1024px) {
   .menu {
     // position: relative;
@@ -641,5 +641,4 @@ $fourth_text_color: #3A3E4B;
       //align-items: center;
     }
   }
-}
 }
